[build-system]
requires = ["setuptools>=67.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kwil"
description = 'Library for interacting with the kwil blockchain'
version = "0.0.3"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
keywords = ["kwil"]
authors = [
  { name = "yaiba", email = "4yaiba@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]
dependencies = [
  "grpcio>=1.53.0",
  "protobuf>=4.22.1",
  "eth-account>=0.8.0",
  "eth-utils>=2.1.0",
  ]

[project.optional-dependencies]
# feature-name = ["package>=1.0.0"]
dev = [
  # test
  "pytest>=7.2.2",
  "pytest-watch>=4.2.0",
  "python-dotenv>=1.0.0",
  # lint
  "black>=23.3.0",
  "flake8>=4.0.1",
  # build
  "twine>=4.0.2",
  "setuptools>=67.6.1",
  "build>=0.10.0",
  "tox>=4.4.11",
]
linter = [
  "black>=23.3.0",
  "flake8>=4.0.1",
  "types-setuptools>=67.6.0.0",
  "types-protobuf>=4.22.0.0",
]

[project.urls]
Homepage = "https://github.com/kwilteam/kwil.py"

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "kwil/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
include = ["kwil_proto*", "kwil_typing*", "kwil_utils*", "kwil*"]